add nav section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h3 class="header">Influencer products</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">products</a></li>
+                <li><a href="">Sign-up</a></li>
+                <li><a href="">Log-in</a></li>
+                <li><a href=""></a><img src="./images/akar-icons_search.png" alt="" srcset=""></li>
+                <li><a href=""></a><img src="./images/clarity_shopping-cart-outline-badged.png" alt="" srcset=""></li>
+            </ul>
+        </nav>
     
+    </header>
+    
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
